--- a/app/src/main/res/layout/activity_firstpage.xml
+++ b/app/src/main/res/layout/activity_firstpage.xml
@@ -35,10 +35,9 @@
             android:layout_margin="10dp"
             android:textSize="18sp"
             android:layout_marginTop="30dp"
-            android:backgroundTint="@color/white"
             android:textColor="@color/white"
             app:cornerRadius="20dp"
-            android:background="@drawable/button"
+            android:backgroundTint="@color/red"
             android:layout_gravity="center_horizontal" />
 
         <Button
@@ -49,10 +48,9 @@
             android:layout_margin="10dp"
             android:textSize="18sp"
             android:layout_marginTop="30dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/red"
             android:textColor="@color/white"
             app:cornerRadius="20dp"
-            android:background="@drawable/button"
             android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
