--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -173,12 +173,11 @@
 
                 <Button
                     android:id="@+id/setupmoviebtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="25dp"
-                    android:background="@drawable/button"
+                    android:backgroundTint="@color/red"
                     android:layout_gravity="center"
                     android:text="Book Movie Reservation"
                     android:textSize="12sp" />
