--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,6 +9,14 @@
         android:background="@drawable/homebackground"
         tools:context=".home">
 
+    <ImageView
+        android:id="@+id/logOutbtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        android:layout_gravity="left"
+        app:srcCompat="@drawable/baseline_logout_24" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
