--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:text="Log In"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <EditText
@@ -71,7 +71,7 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/button"
+            android:backgroundTint="@color/red"
             app:cornerRadius="20dp"/>
 
     </LinearLayout>
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="Not a member yet?"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:layout_marginBottom="20dp"/>
