--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/button"
+            android:backgroundTint="@color/red"
             android:text="Get Started"
             android:textColor="@color/white"
             android:textSize="15sp" />
