--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -25,7 +25,7 @@
             android:text="Register"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <EditText
@@ -99,12 +99,12 @@
         <Button
             android:id="@+id/registerbutton"
             android:layout_width="200dp"
-            android:layout_height="45dp"
+            android:layout_height="48dp"
             android:text="Sign Up"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_marginTop="30dp"
-            android:background="@drawable/button"
+            android:backgroundTint="@color/red"
             app:cornerRadius="20dp"/>
 
     </LinearLayout>
