--- a/app/src/main/res/layout/credit_card_modal.xml
+++ b/app/src/main/res/layout/credit_card_modal.xml
@@ -52,6 +52,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Confirm Payment"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/red"
         android:textColor="@color/white" />
 </LinearLayout>
